# cerebrum

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  jobs.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml
agents/: message_bus.py  orchestrator.py  registry.py
agents/base/: __init__.py
agents/critic/: __init__.py
agents/data_engineer/: __init__.py
agents/memory/: __init__.py
agents/ml_engineer/: __init__.py
agents/planner/: __init__.py
agents/security/: __init__.py
agents/statistician/: __init__.py
agents/visualization/: __init__.py
agents/writer/: __init__.py
apps/api/: Dockerfile  pyproject.toml
apps/api/cerebrum/: main.py
apps/api/cerebrum/config/: __init__.py
apps/api/cerebrum/dependencies/: auth.py
apps/api/cerebrum/exceptions/: __init__.py
apps/api/cerebrum/middleware/: audit.py  rate_limit.py  request_id.py
apps/api/cerebrum/routers/: __init__.py  agents.py  auth.py  datasets.py  health.py  memory.py  ml.py  projects.py  reports.py  tasks.py  users.py  visualizations.py
core/cache/: __init__.py
core/database/: __init__.py
core/llm/: __init__.py  sql_generator.py
core/observability/: __init__.py
core/security/: __init__.py  jwt.py  passwords.py
core/storage/: minio.py
docker/: docker-compose.yml
docker/configs/prometheus/: prometheus.yml
models/domain/: __init__.py
models/schemas/: auth.py  dataset.py  user.py
services/: analytics.py  data_profiler.py  knowledge_graph.py  memory.py  ml.py  query_engine.py  reporting.py  vector_store.py  visualization.py
tests/unit/agents/: test_base_agent.py
