# Python
[tool.poetry]
name = "cerebrum"
version = "0.1.0"
description = "Enterprise Multi-Agent AI Platform"
authors = ["Rupam Biswas <rupam@cerebrum.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://cerebrum.ai"
repository = "https://github.com/yourusername/cerebrum"
documentation = "https://docs.cerebrum.ai"
keywords = ["ai", "agents", "data-science", "mlops", "enterprise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================
# Ruff — Linter & Formatter
# ============================================================
[tool.ruff]
target-version = "py313"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "ANN", # flake8-annotations
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "S101",   # Use of assert (allowed in tests)
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "*.pyi",
]

[tool.ruff.isort]
known-first-party = ["cerebrum", "agents", "services", "core", "models"]

# ============================================================
# MyPy — Static Type Checking
# ============================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["migrations/", "tests/"]

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests", "apps/api/tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Docker)",
    "e2e: End-to-end tests",
    "slow: Slow tests (> 5 seconds)",
    "agent: Tests for AI agents",
    "ml: Tests for ML pipelines",
]

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["apps/api", "agents", "services", "core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
