# Python
[tool.poetry]
name = "cerebrum"
version = "0.1.0"
description = "Enterprise Multi-Agent AI Platform"
authors = ["Rupam Biswas <rupam@cerebrum.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://cerebrum.ai"
repository = "https://github.com/Rupam-Biswas44/cerebrum"
documentation = "https://docs.cerebrum.ai"
keywords = ["ai", "agents", "data-science", "mlops", "enterprise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "core" },
    { include = "models" },
    { include = "services" },
    { include = "agents" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================
# Ruff — Linter & Formatter
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "ANN", # flake8-annotations
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN201", # Missing return type annotation for public function
    "ANN204", # Missing return type annotation for special method
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "S101",   # Use of assert (allowed in tests)
    "S105",   # Possible hardcoded password (triggers on token_type="bearer")
    "S106",   # Possible hardcoded password assigned to argument
    "B008",   # Do not perform function call in argument defaults (FastAPI File/Depends)
    "N818",   # Exception name should end with Error
    "UP042",  # Class inherits from both str and enum.Enum
    "S608",   # Possible SQL injection vector through string-based query construction (safe here)
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "*.pyi",
]

[tool.ruff.isort]
known-first-party = ["cerebrum", "agents", "services", "core", "models"]

# ============================================================
# MyPy — Static Type Checking
# ============================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
explicit_package_bases = true
namespace_packages = true
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "tests/"]

# Per-module overrides for third-party libraries with no/bad stubs
[[tool.mypy.overrides]]
module = [
    "jose.*",
    "minio.*",
    "qdrant_client.*",
    "neo4j.*",
    "sentence_transformers.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langgraph.*",
    "redis.*",
    "celery.*",
    "sqlalchemy.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "structlog.*",
    "opentelemetry.*",
    "duckdb.*",
]
ignore_missing_imports = true
ignore_errors = true

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests", "apps/api/tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Docker)",
    "e2e: End-to-end tests",
    "slow: Slow tests (> 5 seconds)",
    "agent: Tests for AI agents",
    "ml: Tests for ML pipelines",
]

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["apps/api", "agents", "services", "core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
