[project]
name = "cerebrum-api"
version = "0.1.0"
description = "Cerebrum Enterprise AI Platform — Backend API"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Rupam Biswas", email = "rupam@cerebrum.ai" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",

    # Cache
    "redis[hiredis]>=5.0.0",
    "hiredis>=3.0.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "redbeat>=2.2.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # Storage
    "minio>=7.2.0",
    "boto3>=1.35.0",

    # Data
    "polars>=1.6.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "duckdb>=1.1.0",
    "openpyxl>=3.1.0",

    # ML
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.0",
    "torch>=2.4.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.19.0",
    "mlflow>=2.14.0",
    "optuna>=4.0.0",
    "shap>=0.46.0",
    "prophet>=1.1.0",

    # LLM / AI
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "openai>=1.47.0",
    "anthropic>=0.35.0",
    "sentence-transformers>=3.0.0",

    # Vector DB
    "qdrant-client[fastembed]>=1.11.0",

    # Graph DB
    "neo4j>=5.25.0",

    # Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.4.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "tenacity>=9.0.0",
    "email-validator>=2.2.0",
    "python-slugify>=8.0.0",
    "pillow>=10.4.0",
    "weasyprint>=62.0",
    "python-pptx>=1.0.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "testcontainers>=4.8.0",
    "hypothesis>=6.112.0",
    "freezegun>=1.5.0",
    "respx>=0.21.0",
    "anyio>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cerebrum"]
